- Editing now possible on Tags, Recipe (partly), Roles and Countys - Global is now converted from java to scala - Login-pages corrected to wider design - Login-pages have some english required-texts replaced with "*" - Some texts fixed in login-page, button added for registration - All edit-mode is now locked down with Admin-role - Release method refined and tested (run at first release) - Delete and clean DB-method tested and works - Smaller design fixes in header

--- a/app/views/custom/Registration/resetPasswordPage.scala.html
+++ b/app/views/custom/Registration/resetPasswordPage.scala.html
@@ -6,7 +6,7 @@
 @main(Messages("securesocial.password.title")){
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+            <div class="col-xs-12">
 
                 <div class="page-header">
                     <h1>@Messages("securesocial.password.title")</h1>
@@ -28,6 +28,7 @@
                             resetForm("password.password1"),
                             '_label -> Messages("securesocial.signup.password1"),
                             'class -> "input-xlarge",
+                            '_help -> "*",
                             'autofocus -> "autofocus"
                             )
 
@@ -35,6 +36,7 @@
                             resetForm("password.password2"),
                             '_label -> Messages("securesocial.signup.password2"),
                             '_error -> resetForm.error("password"),
+                            '_help -> "*",
                             'class -> "input-xlarge"
                             )
 
