--- a/app/views/custom/passwordChange.scala.html
+++ b/app/views/custom/passwordChange.scala.html
@@ -7,7 +7,7 @@
 @securesocial.views.html.main( Messages("securesocial.passwordChange.title") ) {
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+            <div class="col-xs-12">
                 <div class="page-header">
                     <h1>@Messages("securesocial.passwordChange.title")</h1>
                 </div>
@@ -42,14 +42,16 @@
                             @helper.inputPassword(
                                 passwordChangeForm("newPassword.password1"),
                                 '_label -> Messages("securesocial.passwordChange.newPassword1"),
-                                'class -> "input-xlarge"
+                                'class -> "input-xlarge",
+                                '_help -> "*"
                             )
 
                             @helper.inputPassword(
                                 passwordChangeForm("newPassword.password2"),
                                 '_label -> Messages("securesocial.passwordChange.newPassword2"),
                                 '_error -> passwordChangeForm.error("newPassword"),
-                                'class -> "input-xlarge"
+                                'class -> "input-xlarge",
+                                '_help -> "*"
                             )
 
                             <div class="form-actions">
