--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -202,11 +202,18 @@ label{
 
 // Buttons
 .btn-primary,
+.btn,
 input[type="submit"],
 input[type="reset"]
 {
   margin-top:10px;
   margin-bottom:10px;
+}
+
+.btn-primary,
+input[type="submit"],
+input[type="reset"]
+{
   padding:5px 10px 5px 10px;
   text-align:center;
   border-radius:4px;
@@ -400,7 +407,7 @@ input[type="reset"]:hover
   background-repeat: repeat-x;
   background-size: cover;
   height:84px;
-  box-shadow: 0px 2px 4px #999;
+  box-shadow: 0px 1px 3px #999;
 }
 .logo-img
 {
@@ -446,7 +453,6 @@ input[type="reset"]:hover
 }
 .nav-main-menu-wrapper {
   position: relative;
-  box-shadow: 0 0 10px 0px #aaa;
   background-image: url("/assets/images/general/bg-menu-gray-transparent.png");
   background-repeat: repeat-x;
   z-index:300;
