--- a/app/views/custom/Registration/startResetPassword.scala.html
+++ b/app/views/custom/Registration/startResetPassword.scala.html
@@ -6,7 +6,7 @@
 @main(Messages("securesocial.password.title")){
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+            <div class="col-xs-12">
                 <div class="page-header">
                     <h1>@Messages("securesocial.password.title")</h1>
                 </div>
@@ -27,6 +27,7 @@
                             startForm("email"),
                             '_label -> Messages("securesocial.signup.email1"),
                             'class -> "input-xlarge",
+                            '_help -> Messages("securesocial.passwordChange.currentPassword.help"),
                             'autofocus -> "autofocus"
                             )
 
