--- a/app/views/custom/login.scala.html
+++ b/app/views/custom/login.scala.html
@@ -8,7 +8,7 @@
 @main(Messages("securesocial.login.title")){
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+            <div class="col-xs-12">
 
                 <div class="page-header">
                     <h1>@Messages("securesocial.login.title")</h1>
