--- a/app/views/custom/notAuthorized.scala.html
+++ b/app/views/custom/notAuthorized.scala.html
@@ -3,7 +3,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-md-10 col-md-offset-1 col-xs-offset-0">
+            <div class="col-xs-12">
                 <div class="page-header">
                     <h1>@Messages("securesocial.notAuthorized.title")</h1>
                 </div>
