- Editing now possible on UserCredential, however still not all fields and relations (http://hdc-web.herokuapp.com/edit/user) - UserCredentialRating has had some work (user to user-rating), however not finished - FileUpload have been secured using roles, use the following method syntax: SecuredAction(authorize = WithRole(RoleEnums.ADMIN))(parse.multipartFormData) - The Reviews on the startpage are no longer just HTML-mockup, and actually fetch data, however, since no data can be added yet, nothing is seen

--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -22,7 +22,7 @@
                         <li><a href="@routes.RecipeController.index()">@Messages("edit.menu.recipe")&nbsp;<span class="glyphicon glyphicon-leaf"></span></a></li>
                         <li><a href="@routes.CountyController.index()">@Messages("edit.menu.county")&nbsp;<span class="glyphicon glyphicon-road"></span></a></li>
                         <li><a href="@routes.TagWordController.index()">@Messages("edit.menu.tagword")&nbsp;<span class="glyphicon glyphicon-bookmark"></span></a></li>
-                        <li><a href="#">@Messages("edit.menu.users")&nbsp;<span class="glyphicon glyphicon-user"></span></a></li>
+                        <li><a href="@routes.UserCredentialController.index()">@Messages("edit.menu.users")&nbsp;<span class="glyphicon glyphicon-user"></span></a></li>
                         <li><a href="@routes.UserRoleController.index()">@Messages("edit.menu.roles")&nbsp;<span class="glyphicon glyphicon-lock"></span></a></li>
                         <li><a href="@routes.FileController.index()">@Messages("edit.menu.files")&nbsp;<span class="glyphicon glyphicon-picture"></span></a></li>
                         <li><a href="@routes.ReleaseController.index()">@Messages("edit.menu.release")&nbsp;<span class="glyphicon glyphicon-asterisk"></span></a></li>
