--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -897,10 +897,10 @@ input[type="reset"]:hover
 }
 /* Small devices (tablets, 768px and up) */
 @media screen and (min-width:768px) {
-  .collapse
+  /*.collapse
   {
     display: inherit;
-  }
+  }*/
 }
 /* Small devices (tablets, 768px and down) */
 @media screen and (max-width: 768px) {
