- Add / Remove Role bug fixed - Recipe now reachable from menu - Edit-mode now reachable from menu

--- a/app/views/edit/roles/add.scala.html
+++ b/app/views/edit/roles/add.scala.html
@@ -13,7 +13,7 @@
                 </fieldset>
                 <div class="form-actions">
                     <button class="btn btn-primary" type="submit">@Messages("edit.add.save")</button>
-                    <a class="btn" href="@routes.UserRoleController.index()">@Messages("edit.add.abort")</a>
+                    <a class="btn" href="@routes.UserRoleController.editIndex()">@Messages("edit.add.abort")</a>
                 </div>
             }
         </div>
