--- a/app/views/edit/tagword/add.scala.html
+++ b/app/views/edit/tagword/add.scala.html
@@ -14,7 +14,7 @@
                 </fieldset>
                 <div class="form-actions">
                     <button class="btn btn-primary" type="submit">@Messages("edit.add.save")</button>
-                    <a class="btn" href="@routes.TagWordController.index()">@Messages("edit.add.abort")</a>
+                    <a class="btn" href="@routes.TagWordController.editIndex()">@Messages("edit.add.abort")</a>
                 </div>
             }
         </div>
