--- a/app/views/edit/usercredential/add.scala.html
+++ b/app/views/edit/usercredential/add.scala.html
@@ -15,7 +15,7 @@
                 </fieldset>
                 <div class="form-actions">
                     <button class="btn btn-primary" type="submit">@Messages("edit.add.save")</button>
-                    <a class="btn" href="@routes.UserCredentialController.index()">@Messages("edit.add.abort")</a>
+                    <a class="btn" href="@routes.UserCredentialController.editIndex()">@Messages("edit.add.abort")</a>
                 </div>
             }
         </div>
