--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -18,14 +18,14 @@
                 <div class="navbar-static-top">
                     <a class="navbar-brand" href="#">@Messages("edit.menu.title")</a>
                     <ul class="nav navbar-nav">
-                        <li><a href="@routes.ContentController.index()">@Messages("edit.menu.pages")&nbsp;<span class="glyphicon glyphicon-file"></span></a></li>
-                        <li><a href="@routes.RecipeController.index()">@Messages("edit.menu.recipe")&nbsp;<span class="glyphicon glyphicon-leaf"></span></a></li>
-                        <li><a href="@routes.CountyController.index()">@Messages("edit.menu.county")&nbsp;<span class="glyphicon glyphicon-road"></span></a></li>
-                        <li><a href="@routes.TagWordController.index()">@Messages("edit.menu.tagword")&nbsp;<span class="glyphicon glyphicon-bookmark"></span></a></li>
-                        <li><a href="@routes.UserCredentialController.index()">@Messages("edit.menu.users")&nbsp;<span class="glyphicon glyphicon-user"></span></a></li>
-                        <li><a href="@routes.UserRoleController.index()">@Messages("edit.menu.roles")&nbsp;<span class="glyphicon glyphicon-lock"></span></a></li>
-                        <li><a href="@routes.FileController.index()">@Messages("edit.menu.files")&nbsp;<span class="glyphicon glyphicon-picture"></span></a></li>
-                        <li><a href="@routes.ReleaseController.index()">@Messages("edit.menu.release")&nbsp;<span class="glyphicon glyphicon-asterisk"></span></a></li>
+                        <li><a href="@routes.ContentController.editIndex()">@Messages("edit.menu.pages")&nbsp;<span class="glyphicon glyphicon-file"></span></a></li>
+                        <li><a href="@routes.RecipeController.editIndex()">@Messages("edit.menu.recipe")&nbsp;<span class="glyphicon glyphicon-leaf"></span></a></li>
+                        <li><a href="@routes.CountyController.editIndex()">@Messages("edit.menu.county")&nbsp;<span class="glyphicon glyphicon-road"></span></a></li>
+                        <li><a href="@routes.TagWordController.editIndex()">@Messages("edit.menu.tagword")&nbsp;<span class="glyphicon glyphicon-bookmark"></span></a></li>
+                        <li><a href="@routes.UserCredentialController.editIndex()">@Messages("edit.menu.users")&nbsp;<span class="glyphicon glyphicon-user"></span></a></li>
+                        <li><a href="@routes.UserRoleController.editIndex()">@Messages("edit.menu.roles")&nbsp;<span class="glyphicon glyphicon-lock"></span></a></li>
+                        <li><a href="@routes.FileController.editIndex()">@Messages("edit.menu.files")&nbsp;<span class="glyphicon glyphicon-picture"></span></a></li>
+                        <li><a href="@routes.ReleaseController.editIndex()">@Messages("edit.menu.release")&nbsp;<span class="glyphicon glyphicon-asterisk"></span></a></li>
                     </ul>
                     <ul class="nav navbar-nav pull-right">
                         <li><a href="@routes.StartPageController.index()"><span class="glyphicon glyphicon-globe"></span>&nbsp;@Messages("edit.menu.backtosite")</a></li>
